--- a/base/templates/base/components/project_nav_component.html
+++ b/base/templates/base/components/project_nav_component.html
@@ -27,7 +27,7 @@
                 </ul>
             </li>
             <li>
-                <p><a href="">Issues</a></p>
+                <p><a href="{% url 'issues' project.id %}">Issues</a></p>
             </li>
             <li>
                 <p><a href="">Activity</a></p>
