--- a/base/templates/base/issue_form.html
+++ b/base/templates/base/issue_form.html
@@ -27,7 +27,8 @@
         </div>
         <div>
             <label for="">Reporter</label>
-            {{form.reporter}}
+            <!-- {{form.reporter}} -->
+            <input required type="text" name="reporter" id="" value="{{request.user}}">
         </div>
         <div>
             <label for="">Assignee</label>
