--- a/base/templates/base/project-board.html
+++ b/base/templates/base/project-board.html
@@ -14,9 +14,15 @@
     <div>
         {% include 'base/components/project_nav_component.html' %}
     </div>
+    {% if request.path|slice:":7" == '/board/' %}
     <div>
         {% include 'base/components/board_component.html' %}
     </div>
+    {% elif request.path|slice:":8" == '/issues/' %}
+    <div>
+        {% include 'base/components/issues_component.html' %}
+    </div>
+    {% endif %}
 </div>
 
 {% endblock content %}
