--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,7 @@
     <div class="navbar-left">
         <a href="{% url 'home' %}">TASK MANAGER</a>
         {% if request.user.is_authenticated %}
-        <a href="">Boards</a>
+        <a href="{% url 'boards' %}">Boards</a>
         <a href="">Tasks</a>
         <a href="">Projects</a>
         {% endif %}
